--- a/src/components/Auth/Home.css
+++ b/src/components/Auth/Home.css
@@ -88,7 +88,7 @@
   }
   
   .overlay {
-    background-image: url('image/image.gif');
+    background-image: url('src/assets/images/giphy1.gif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
