--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,10 @@
 
 
 body {
-    background: linear-gradient(
-        to top,
-        rgba(46, 94, 109, 0.4) 40%,
-        rgba(46, 94, 109, 0)
-      );
-      font-family: "Poppins", sans-serif;
+  background: linear-gradient(to top,
+      rgba(46, 94, 109, 0.4) 40%,
+      rgba(46, 94, 109, 0));
+  font-family: "Poppins", sans-serif;
 }
 
 .bouncing-pin {
@@ -25,10 +23,46 @@ body {
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(-15px);
   }
+
   100% {
     transform: translateY(0);
+  }
+}
+
+.card {
+  width: 95%;
+  height: 100%;
+  border-radius: 44px;
+  background: linear-gradient(
+      rgba(168, 25, 6, 0.4) 60%,
+      rgba(121, 19, 1, 0));
+  box-shadow: 2px 3px 3px #f01f10,
+    2px 3px 3px #ff4949;
+}
+
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 12px;
+    height: 20px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f7f4ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #B2B2B2;
+    border-radius: 100vh;
+    border: 3px solid #f6f7ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #B2B2B2;
   }
 }
